* Version 2.1.0 (unreleased)
 ** Added setting to kill scdaemon on show, to release the device.
 ** Added the ability to program standard YuibKeys with slot based TOTP credentials.
 ** Better handling of composite modes.

* Version 2.0.2 (released 2015-06-16)
 ** Minor packaging related fixes.

* Version 2.0.1 (released 2015-06-16)
 ** Minor fixes to platform specific quirks.

* Version 2.0.0 (released 2015-06-15)
 ** Complete rewrite
    - Supports all OATH-enabled YubiKeys, including YubiKey Standard.
    - New overhauled UI.