@@ -1,7 +1,8 @@
 * Version 2.1.0 (unreleased)
  ** Added setting to kill scdaemon on show, to release the device.
- ** Added the ability to program standard YuibKeys with slot based TOTP credentials.
+ ** Added the ability to program standard YubiKeys with slot based TOTP credentials.
  ** Better handling of composite modes.
+ ** Added functionality to the CLI programming YubiKeys.
 
 * Version 2.0.2 (released 2015-06-16)
  ** Minor packaging related fixes.
